--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/jquery": "^3.3.33",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "bootstrap": "^4.4.1",
     "css-loader": "^1.0.1",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
