--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/jquery": "^3.3.33",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.1",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
